# django-appdata

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.rst  brand.sh  dependencies.py  dev_requirements.txt  pavement.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
app_data/: __init__.py  admin.py  containers.py  fields.py  forms.py  registry.py
test_APP_NAME/: __init__.py  run_tests.py  settings.py  urls.py
test_app_data/: __init__.py  admin.py  cases.py  manage.py  models.py  run_tests.py  runtests.py  settings.py  test_admin.py  test_base.py  test_fields.py  test_forms.py  urls.py
test_app_data/migrations/: 0001_initial.py
