[metadata]
name = django-appdata
version = attr: app_data.__version__
url = https://github.com/ella/django-appdata
project_urls =
	Documentation = https://django-appdata.readthedocs.io/
author = Ella Development Team
author_email =dev@ellaproject.cz
description = Extendable field that enables Django apps to store their data on your models.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
classifiers =
	License :: OSI Approved :: BSD License
	Development Status :: 4 - Beta
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
include_package_data = True
install_requires =
	django
setup_requires =
	setuptools
packages = app_data
python_requires = >=3.7
test_suite = test_app_data.runtests.run_tests
zip_safe = False

[options.package_data]
* = *.txt, *.rst
app_data = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[sdist]
formats = zip

[bdist_wheel]
universal = 1
